fixed overall spacing in CSS

--- a/src/App.css
+++ b/src/App.css
@@ -30,19 +30,23 @@ h2 {
     margin-bottom: 0;
 }
 
-.search-bar {
-    padding: 10px;
+.main-search {
+    margin-bottom: 40px;
+}
+
+.search-area {
     padding-left: 0;
 }
 
+.search-bar {
+    padding: 10px;
+}
+
 .search-bar:focus {
-    box-shadow: 0 0 0 0.25rem rgba(250, 246, 2);
+    box-shadow: 0 0 0 0.25rem rgba(250, 246, 2, 0.726);
     border-color: #dee2e6;
 }
 
-.result-main {
-    margin-top: 40px;
-}
 
 .results {
     background-color:rgba(255, 255, 255, 0.651);
@@ -57,6 +61,7 @@ h2 {
 
 .result-list {
     padding: 0 30px;
+    padding-bottom: 30px;
 }
 
 .phonetic {
